Fix drag handler z-index issue.

--- a/css/styles.less
+++ b/css/styles.less
@@ -407,6 +407,10 @@ body.segment-resize-dragging * {
   color: rgba(255, 255, 255, .4);
 }
 
+.segment:hover {
+  z-index: 999999;
+}
+
 .segment .drag-handle {
   z-index: 10000;
 
